hphp/test/zend/good/ext/standard/tests/strings/bug28633.php
<?php
	echo sprintf("%05.2f", 0.02) . "\n";
	echo sprintf("%05.2f", 2.02) . "\n";
?>